# data_collector

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  data_distributor.cpp  data_distributor.h  data_generator.cpp  data_generator.h  file_extensions.h  http_transmitter.cpp  http_transmitter.h  main.cpp  output_file_handler.cpp  output_file_handler.h
test/: CMakeLists.txt  tests.cpp
test_server/: Dockerfile  run.sh  server.py
